--- a/index.html
+++ b/index.html
@@ -123,20 +123,15 @@
                         <div class="info-group">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> GRADUATION</span></div>
-                                <div class="info info-graduation"><span>I have completed my Bachelor of Engineering (B.E.) in the feild of
-                                        Information and Technology (I.T.) from Noble Group of Institution (N.G.I.) from Gujarat
-                                        Technological University with 9.19 ( SPI ),8.48 ( CPI ) and 8.72 ( CGPA ).</span></div>
+                                <div class="info info-graduation"><span>I have completed my Bachelor of Engineering (B.E.) in the feild of Information and Technology (I.T.) from Noble Group of Institution (N.G.I.) from Gujarat Technological University with 9.19 ( SPI ),8.48 ( CPI ) and 8.72 ( CGPA ).</span></div>
                             </div>
                         </div>
                         <div class="info-group">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2013</span><span class="info-title">SCHOOL</span></div>
-                                <div class="info info-graduation"><span>I have completed my Higher Secondary School (H.S.C.) and
-                                        Secondary School (S.S.C.) from Shree Swaminarayan Gurukul, Salvav - C.B.S.E. BOARD. </span></div>
+                                <div class="info info-graduation"><span>I have completed my Higher Secondary School (H.S.C.) and Secondary School (S.S.C.) from Shree Swaminarayan Gurukul, Salvav - C.B.S.E. BOARD. </span></div>
                             </div>
                         </div>
-
-
                                 <h5>Let's Connect</h5>
                                 <div class="social-group side-group">
                                     <a href="https://www.facebook.com/rishabhtwr17"><i class="fa  fa-facebook  fa-2x" aria-hidden="true"></i> </a>
@@ -194,11 +189,7 @@
                                 <div class="lable"><span class="info-date"> 2021 TO 2022</span><span class="info-title"> UI / UX Developer</span></div>
                                 <div class="info info-internship"><span>JEWEL PRO-TECH PVT. LTD.</span></div>
                                 <div>
-                                    <p> While working at Jewel Pro Tech Pvt. Ltd., I was responsible for designing user-friendly interfaces 
-                                        for the web. Using my expertise in HTML, CSS, and responsive design, I created intuitive UI 
-                                        designs for the website www.diamondicq.com, and implemented them with a focus on 
-                                        performance and compatibility. By utilizing my skills in UI design and front-end development, I 
-                                        delivered visually appealing and highly functional user interfaces that exceeded expectations.  </p>
+                                    <p> While working at Jewel Pro Tech Pvt. Ltd., I was responsible for designing user-friendly interfaces for the web. Using my expertise in HTML, CSS, and responsive design, I created intuitive UI designs for the website www.diamondicq.com, and implemented them with a focus on performance and compatibility. By utilizing my skills in UI design and front-end development, I delivered visually appealing and highly functional user interfaces that exceeded expectations.  </p>
                                 </div>
                             </div>
                         </div>
