Tabs of portfolio adjjusted

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
             <div class="col-12 col-md-10">
 
                 <!-- Tab Titles -->
-                <div id="tabbed-nav" class="d-flex justify-content-center pb-4">
+                <div id="tabbed-nav" class="d-flex justify-content-center pb-4 px-3">
                     <div class="tab active text-small" data-target="tab-1">Logo</div>
                     <div class="tab text-small" data-target="tab-2">UI/UX</div>
                     <div class="tab text-small" data-target="tab-3">Graphic </div>
