Update web link

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Style sheet of website-->
-    <link href="css/Demo type scale.css" rel="stylesheet">
+    <link 
+    href="css/Demo type scale.css" rel="stylesheet">
 
     <!-- Fevicon-->
     <link rel="icon" type="image/x-icon" href="image/rishabh-tiwari-fevicon.png">
@@ -103,7 +104,9 @@
             <div class="col-12 col-md-10">
 
                 <!-- Tab Titles -->
-                <div id="tabbed-nav" class="d-flex justify-content-center pb-4 px-3">
+                <div id="tabbed-nav" class="d-flex
+                
+                justify-content-center pb-4 px-3">
                     <div class="tab active text-small" data-target="tab-1">Logo</div>
                     <div class="tab text-small" data-target="tab-2">UI/UX</div>
                     <div class="tab text-small" data-target="tab-3">Graphic </div>
