--- a/project-profile.html
+++ b/project-profile.html
@@ -123,7 +123,7 @@
                                             pages requiring hard coding
                                         </li>
                                         <li> Built various pages on the company's website- <a
-                                                href="www.infocepts.com"><span
+                                                href="https://www.infocepts.com/"><span
                                                     class="green-text fw-bold">www.infocepts.com</span></a>, including
                                             Our Capabilities, All Success Stories, What We Do, Career, Executive Team,
                                             White Papers & Reports, Glossary, Contact Us, and LCA Posting pages, as well
@@ -155,7 +155,7 @@
                                 <div class="accordion-body">
                                     <ul>
                                         <li> Collaborated with designers and back-end developers to build and maintain
-                                            the company's website, <a href="www.diamondicq.com"><span
+                                            the company's website, <a href="https://www.diamondicq.com/"><span
                                                     class="green-text fw-bold">www.diamondicq.com</span></a>.
                                         </li>
                                         <li> Redesigned an old website into a new one.
