Added Presentation in my Portfolio
Added links for 4 UI UX Presentation in Portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Style sheet of website-->
-    <link 
-    href="css/Demo type scale.css" rel="stylesheet">
+    <link href="css/Demo type scale.css" rel="stylesheet">
 
     <!-- Fevicon-->
     <link rel="icon" type="image/x-icon" href="image/rishabh-tiwari-fevicon.png">
@@ -273,7 +272,54 @@
                                         </div>
                                     </a>
                                 </div>
-
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-forward-aipdf"
+                                        target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Forward AI.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Click to Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-win-homepdf
+                                    " target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Win Home Inspection.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Click to Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-merilpdf "
+                                        target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Meril.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Click to Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-vector-consultingpdf
+                                    " target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Vector Consulting.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Click to Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
