--- a/portfolio.html
+++ b/portfolio.html
@@ -218,7 +218,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfolioUIUX5.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -230,11 +230,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfolioUIUX1.png">
                                             <div class="overlay">
-<<<<<<< Updated upstream
-                                                <span class="info-title text"> Click to Open Project</span>
-=======
                                                 <span class="info-title text">Open Project</span>
->>>>>>> Stashed changes
                                             </div>
 
                                         </div>
@@ -247,7 +243,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfolioUIUX2.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -259,11 +255,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfolioUIUX3.png">
                                             <div class="overlay">
-<<<<<<< Updated upstream
-                                                <span class="info-title text"> Click to Open Project</span>
-=======
                                                 <span class="info-title text">Open Project</span>
->>>>>>> Stashed changes
                                             </div>
                                         </div>
                                     </a>
@@ -275,7 +267,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfolioUIUX4.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -287,7 +279,7 @@
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image/logo/Presentation - Forward AI.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Presentation</span>
+                                                <span class="info-title text"> Open Presentation</span>
                                             </div>
                                         </div>
                                     </a>
@@ -299,7 +291,7 @@
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image/logo/Presentation - Win Home Inspection.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Presentation</span>
+                                                <span class="info-title text"> Open Presentation</span>
                                             </div>
                                         </div>
                                     </a>
@@ -311,7 +303,7 @@
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image/logo/Presentation - Meril.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Presentation</span>
+                                                <span class="info-title text"> Open Presentation</span>
                                             </div>
                                         </div>
                                     </a>
@@ -323,7 +315,7 @@
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image/logo/Presentation - Vector Consulting.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Presentation</span>
+                                                <span class="info-title text"> Open Presentation</span>
                                             </div>
                                         </div>
                                     </a>
@@ -344,7 +336,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfoliographic6.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -356,7 +348,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfoliographic1.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -368,7 +360,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfoliographic2.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -380,7 +372,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfoliographic3.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -392,7 +384,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfoliographic4.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
@@ -404,7 +396,7 @@
                                             <img alt="Portfolio Image" class="img-fluid border-0"
                                                 src="image/logo/portfoliographic5.png">
                                             <div class="overlay">
-                                                <span class="info-title text"> Click to Open Project</span>
+                                                <span class="info-title text"> Open Project</span>
                                             </div>
                                         </div>
                                     </a>
