--- a/portfolio.html
+++ b/portfolio.html
@@ -261,6 +261,28 @@
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.infocepts.ai/" target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Portfolio Image" class="img-fluid border-0"
+                                                src="image/logo/Live Website - Infocepts.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Live Website</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.diamondicq.com/" target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Portfolio Image" class="img-fluid border-0"
+                                                src="image/logo/Live Website - Diamond ICQ.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Live Website</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
                                     <a href="https://www.behance.net/gallery/56256277/Patels-Tour-and-Travels-Application"
                                         target="_blank">
                                         <div class="gallery_image">
