--- a/portfolio.html
+++ b/portfolio.html
@@ -210,6 +210,31 @@
                     <div id="tab-2" class="images">
                         <div class="container">
                             <div class="row">
+                                <!-- Live Website -->
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.infocepts.ai/" target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Portfolio Image" class="img-fluid border-0"
+                                                src="image/logo/Live Website - Infocepts.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Live Website</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.diamondicq.com/" target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Portfolio Image" class="img-fluid border-0"
+                                                src="image/logo/Live Website - Diamond ICQ.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Live Website</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+
+                                <!-- UI Projects -->
 
                                 <div class="col-6 col-md-3 p-2">
                                     <a href="https://www.behance.net/gallery/56833623/Travelly-App-Design"
@@ -260,28 +285,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
-                                    <a href="https://www.infocepts.ai/" target="_blank">
-                                        <div class="gallery_image">
-                                            <img alt="Portfolio Image" class="img-fluid border-0"
-                                                src="image/logo/Live Website - Infocepts.png">
-                                            <div class="overlay">
-                                                <span class="info-title text"> Open Live Website</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-6 col-md-3 p-2">
-                                    <a href="https://www.diamondicq.com/" target="_blank">
-                                        <div class="gallery_image">
-                                            <img alt="Portfolio Image" class="img-fluid border-0"
-                                                src="image/logo/Live Website - Diamond ICQ.png">
-                                            <div class="overlay">
-                                                <span class="info-title text"> Open Live Website</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
+
                                 <div class="col-6 col-md-3 p-2">
                                     <a href="https://www.behance.net/gallery/56256277/Patels-Tour-and-Travels-Application"
                                         target="_blank">
@@ -294,6 +298,9 @@
                                         </div>
                                     </a>
                                 </div>
+
+                                <!-- UI Presentations -->
+
                                 <div class="col-6 col-md-3 p-2">
                                     <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-forward-aipdf"
                                         target="_blank">
