Added HDFC presentations.
Added HDFC App and website presentations.

--- a/portfolio.html
+++ b/portfolio.html
@@ -234,6 +234,82 @@
                                     </a>
                                 </div>
 
+                                <!-- UI Presentations -->
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-hdfc-mutual-fund-apppdf
+                                    "
+                                        target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image\logo\Presentation - HDFC Mutual Fund App.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-hdfc-websitepdf"
+                                        target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image\logo\Presentation - HDFC Website.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-forward-aipdf-9144"
+                                        target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Forward AI.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-win-homepdf
+                                    " target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Win Home Inspection.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-merilpdf "
+                                        target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Meril.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-6 col-md-3 p-2">
+                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-vector-consultingpdf
+                                    " target="_blank">
+                                        <div class="gallery_image">
+                                            <img alt="Presentation Image" class="img-fluid border-0"
+                                                src="image/logo/Presentation - Vector Consulting.png">
+                                            <div class="overlay">
+                                                <span class="info-title text"> Open Presentation</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+
                                 <!-- UI Projects -->
 
                                 <div class="col-6 col-md-3 p-2">
@@ -299,56 +375,8 @@
                                     </a>
                                 </div>
 
-                                <!-- UI Presentations -->
+                                
 
-                                <div class="col-6 col-md-3 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-forward-aipdf-9144"
-                                        target="_blank">
-                                        <div class="gallery_image">
-                                            <img alt="Presentation Image" class="img-fluid border-0"
-                                                src="image/logo/Presentation - Forward AI.png">
-                                            <div class="overlay">
-                                                <span class="info-title text"> Open Presentation</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-6 col-md-3 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-win-homepdf
-                                    " target="_blank">
-                                        <div class="gallery_image">
-                                            <img alt="Presentation Image" class="img-fluid border-0"
-                                                src="image/logo/Presentation - Win Home Inspection.png">
-                                            <div class="overlay">
-                                                <span class="info-title text"> Open Presentation</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-6 col-md-3 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-merilpdf "
-                                        target="_blank">
-                                        <div class="gallery_image">
-                                            <img alt="Presentation Image" class="img-fluid border-0"
-                                                src="image/logo/Presentation - Meril.png">
-                                            <div class="overlay">
-                                                <span class="info-title text"> Open Presentation</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-6 col-md-3 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-vector-consultingpdf
-                                    " target="_blank">
-                                        <div class="gallery_image">
-                                            <img alt="Presentation Image" class="img-fluid border-0"
-                                                src="image/logo/Presentation - Vector Consulting.png">
-                                            <div class="overlay">
-                                                <span class="info-title text"> Open Presentation</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
                             </div>
                         </div>
                     </div>
