--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@
                         <div class="container">
                             <div class="row">
                                 <!-- Live Website -->
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.infocepts.ai/" target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Portfolio Image" class="img-fluid border-0"
@@ -222,7 +222,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.diamondicq.com/" target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Portfolio Image" class="img-fluid border-0"
@@ -235,10 +235,9 @@
                                 </div>
 
                                 <!-- UI Presentations -->
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-hdfc-mutual-fund-apppdf
-                                    "
-                                        target="_blank">
+                                    " target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image\logo\Presentation - HDFC Mutual Fund App.png">
@@ -248,7 +247,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-hdfc-websitepdf"
                                         target="_blank">
                                         <div class="gallery_image">
@@ -261,7 +260,7 @@
                                     </a>
                                 </div>
 
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-forward-aipdf-9144"
                                         target="_blank">
                                         <div class="gallery_image">
@@ -273,7 +272,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-win-homepdf
                                     " target="_blank">
                                         <div class="gallery_image">
@@ -285,7 +284,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-merilpdf "
                                         target="_blank">
                                         <div class="gallery_image">
@@ -297,7 +296,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-vector-consultingpdf
                                     " target="_blank">
                                         <div class="gallery_image">
@@ -312,7 +311,7 @@
 
                                 <!-- UI Projects -->
 
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.behance.net/gallery/56833623/Travelly-App-Design"
                                         target=”_blank”>
                                         <div class="gallery_image">
@@ -324,7 +323,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.behance.net/gallery/55950665/Angel-Convent-School-Website"
                                         target=”_blank”>
                                         <div class="gallery_image">
@@ -337,7 +336,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.behance.net/gallery/63838901/Furnify-Website-Concept"
                                         target="_blank">
                                         <div class="gallery_image">
@@ -349,7 +348,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.behance.net/gallery/99331495/Mycaptain-Web-Application-Version-1"
                                         target="_blank">
                                         <div class="gallery_image">
@@ -362,7 +361,7 @@
                                     </a>
                                 </div>
 
-                                <div class="col-6 col-md-3 p-2">
+                                <div class="col-6 col-md-4 p-2">
                                     <a href="https://www.behance.net/gallery/56256277/Patels-Tour-and-Travels-Application"
                                         target="_blank">
                                         <div class="gallery_image">
@@ -375,7 +374,7 @@
                                     </a>
                                 </div>
 
-                                
+
 
                             </div>
                         </div>
