--- a/portfolio.html
+++ b/portfolio.html
@@ -236,8 +236,8 @@
 
                                 <!-- UI Presentations -->
                                 <div class="col-6 col-md-4 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-hdfc-mutual-fund-apppdf
-                                    " target="_blank">
+                                    <a href="https://drive.google.com/file/d/1bg4IfxSX8YQ8A59SJiKkYCDw8Zb5QgWK/view?usp=sharing"
+                                        target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image\logo\Presentation - HDFC Mutual Fund App.png">
@@ -248,7 +248,7 @@
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-hdfc-websitepdf"
+                                    <a href="https://drive.google.com/file/d/1aUYJmtDI2ncuT_OyRe8MAzgZIx6FXLhN/view?usp=sharing"
                                         target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Presentation Image" class="img-fluid border-0"
@@ -261,7 +261,7 @@
                                 </div>
 
                                 <div class="col-6 col-md-4 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-forward-aipdf-9144"
+                                    <a href="https://drive.google.com/file/d/1ef9_Cd9qjL48JJB1GOAaCuvVBUtR9x6o/view?usp=sharing"
                                         target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Presentation Image" class="img-fluid border-0"
@@ -273,8 +273,8 @@
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-win-homepdf
-                                    " target="_blank">
+                                    <a href="https://drive.google.com/file/d/1U5ZHQNr-lF8KI8FDedbt3fD1mi2dUb56/view?usp=sharing"
+                                        target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image/logo/Presentation - Win Home Inspection.png">
@@ -285,7 +285,7 @@
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-merilpdf "
+                                    <a href="https://drive.google.com/file/d/1qrNfbjpV_iEI_UIkMeqHrnRVKdouy1P9/view?usp=sharing "
                                         target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Presentation Image" class="img-fluid border-0"
@@ -297,8 +297,8 @@
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4 p-2">
-                                    <a href="https://www.slideshare.net/RishabhTiwari23/rishabh-ui-presentation-vector-consultingpdf
-                                    " target="_blank">
+                                    <a href="https://drive.google.com/file/d/1VePA7iqRhcUck8Rqb4kqTtReq6AmeBMe/view?usp=sharing"
+                                        target="_blank">
                                         <div class="gallery_image">
                                             <img alt="Presentation Image" class="img-fluid border-0"
                                                 src="image/logo/Presentation - Vector Consulting.png">
