--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                         <li class="list-group-item text_small pb-0">Contact Number - +91 99136 14651.</li>
                     </ul>
                     <div>
-                        <a href="#"> <button type="button" class="btn btn-main">Download Resume</button></a>
+                        <a href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf"> <button type="button"
+                                class="btn btn-main">Download Resume</button></a>
 
                     </div>
                 </div>
