Updated My introduction
Updated my introduction in home page.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,16 @@
                     class="col-12 col-lg-6 col-md-8 px-3 px-sm-5  custom-padding d-flex flex-column justify-content-center">
                     <h6 class="fw-bold">About Me</h6>
                     <h2>A UI/UX Designer & Web Developer Based in India</h2>
-                    <p>I am an IT graduate with expertise in UI design and front-end development using HTML, CSS, and
-                        Bootstrap. I have a strong work ethic, leadership experience, and creative aptitude. </p>
+                    <p> As a seasoned IT professional, I specialize in UI/UX design and front-end development,
+                        leveraging my expertise in HTML, CSS, Javascript and Bootstrap. With a rich toolkit including
+                        Figma and Adobe Suite, I bring a keen eye for detail and a commitment to user-centric design
+                        principles.
+                        <br> My extensive experience encompasses effective project management, stakeholder
+                        communication, and agile methodologies, ensuring the seamless delivery of innovative digital
+                        solutions. I am
+                        passionate about crafting engaging user interfaces that transcend expectations and drive
+                        superior user experiences.
+                    </p>
                     <ul class="list-group mb-3">
                         <li class="list-group-item text_small pb-0">Name - Rishabh Tiwari</li>
                         <li class="list-group-item text_small pb-0">E Mail - rishabhtwr17@gmail.com</li>
