--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                         leveraging my expertise in HTML, CSS, Javascript and Bootstrap. With a rich toolkit including
                         Figma and Adobe Suite, I bring a keen eye for detail and a commitment to user-centric design
                         principles.
-                        <br> My extensive experience encompasses effective project management, stakeholder
+                    </p>
+                    <p> My extensive experience encompasses effective project management, stakeholder
                         communication, and agile methodologies, ensuring the seamless delivery of innovative digital
-                        solutions. I am
-                        passionate about crafting engaging user interfaces that transcend expectations and drive
-                        superior user experiences.
+                        solutions. I am passionate about crafting engaging user interfaces that transcend expectations
+                        and drive superior user experiences.
                     </p>
                     <ul class="list-group mb-3">
                         <li class="list-group-item text_small pb-0">Name - Rishabh Tiwari</li>
