--- a/index-serviceTest.html
+++ b/index-serviceTest.html
@@ -113,7 +113,7 @@
     </div>
 
     <!-- About Us- Section 2 - My Skills -->
-    <div class="container custom-padding mybg">
+    <div class="container custom-padding ">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-start text-sm-center  mb-3">My Skills</h1>
@@ -128,93 +128,118 @@
         </div>
         <div class="row mt-5">
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Adobe Photoshop</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>85%</span>
+            <!--Service 1-->
+            <div class="col-12 col-md-6 col-lg-4 mb-2 ">
+                <div class="m-3 d-flex justify-content-center align-items-center flex-column">
+                    <div
+                        class="mb-4 service_container position-relative d-flex justify-content-center align-items-center">
+                        <div class="service_image position-absolute">
+                            <img src="image/svg/icons/UI UX.svg" class="img-fluid rounded-top" alt="UI UX Icon" />
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Adobe Illustrator</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>75%</span>
+                    <div class="m-2">
+                        <h6 class="fw-bold mb-1 text-center mb-2 cal-height-2 service-text-center ">Design</h6>
+                        <p class="text-center "> I admire clear content structures, tidy designs, and
+                            interactions that make sense.
+                        </p>
                     </div>
+                    <div class="m-2">
+                        <p class="fw-bold mb-1 text-green text-center cal-height-1 service-text-center">Things I enjoy
+                            designing:
+                        </p>
+                        <p class="text-center"> UX, UI, Websites, Apps, Logos
+                        </p>
+
+                    </div>
+
+                    <div class="m-2">
+                        <p class="fw-bold text-green mb-1 text-center cal-height-1 service-text-center">Design Tools:
+                        </p>
+                        <p class="text-center"> UX, UI, Websites, Apps, Logos
+                        </p>
+
+                    </div>
+
+
                 </div>
             </div>
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Adobe Indesign</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>70%</span>
+            <!--Service 2-->
+            <div class="col-12 col-md-6 col-lg-4 mb-2 ">
+                <div class="m-3 d-flex justify-content-center align-items-center flex-column">
+                    <div
+                        class="mb-4 service_container position-relative d-flex justify-content-center align-items-center">
+                        <div class="service_image position-absolute">
+                            <img src="image/svg/icons/UI UX.svg" class="img-fluid rounded-top" alt="UI UX Icon" />
+                        </div>
                     </div>
+                    <div class="m-2">
+                        <h6 class="fw-bold mb-1 text-center mb-2 cal-height-2 service-text-center ">Frontend Development
+                        </h6>
+                        <p class="text-center "> I admire clear content structures, tidy designs, and
+                            interactions that make sense.
+                        </p>
+                    </div>
+                    <div class="m-2">
+                        <p class="fw-bold mb-1 text-green text-center cal-height-1 service-text-center">Languages I
+                            speak:
+                        </p>
+                        <p class="text-center"> HTML, CSS, Bootstrap, Git
+                        </p>
+
+                    </div>
+
+                    <div class="m-2">
+                        <p class="fw-bold text-green mb-1 text-center cal-height-1 service-text-center">Tech Stack:
+                        </p>
+                        <p class="text-center"> UX, UI, Websites, Apps, Logos
+                        </p>
+
+                    </div>
+
+
                 </div>
             </div>
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">HTML 5</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>90%</span>
+            <!--Service 3-->
+            <div class="col-12 col-md-6 col-lg-4 mb-2 ">
+                <div class="m-3  d-flex justify-content-center align-items-center flex-column">
+                    <div
+                        class="mb-4 service_container position-relative d-flex justify-content-center align-items-center">
+                        <div class="service_image position-absolute">
+                            <img src="image/svg/icons/UI UX.svg" class="img-fluid rounded-top" alt="UI UX Icon" />
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">CSS 3</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>90%</span>
+                    <div class="m-2">
+                        <h6 class="fw-bold mb-1 text-center mb-2 cal-height-2 service-text-center ">Project Management
+                        </h6>
+                        <p class="text-center "> I admire clear content structures, tidy designs, and
+                            interactions that make sense.
+                        </p>
                     </div>
+                    <div class="m-2">
+                        <p class="fw-bold mb-1 text-green text-center cal-height-1 service-text-center">Experiences I
+                            draw from:
+                        </p>
+                        <p class="text-center"> UX/UI, Web development, Freelancing
+                        </p>
+
+                    </div>
+
+                    <div class="m-2">
+                        <p class="fw-bold text-green mb-1 text-center cal-height-1 service-text-center">Skills Suite:
+                        </p>
+                        <p class="text-center"> UX, UI, Websites, Apps, Logos
+                        </p>
+
+                    </div>
+
+
                 </div>
             </div>
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Javascript</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>60%</span>
-                    </div>
-                </div>
-            </div>
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Figma</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>85%</span>
-                    </div>
-                </div>
-            </div>
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Balsamiq</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>95%</span>
-                    </div>
-                </div>
-            </div>
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">React JS</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>50%</span>
-                    </div>
-                </div>
-
-            </div>
         </div>
     </div>
 
